tests/neg-scalajs/js-members-bad-signatures.check
-- Error: tests/neg-scalajs/js-members-bad-signatures.scala:7:6 --------------------------------------------------------
7 |  def a1_=(x: Int): Int = js.native // error
  |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |  JS setters must return Unit
-- Error: tests/neg-scalajs/js-members-bad-signatures.scala:8:6 --------------------------------------------------------
8 |  def a2_=(x: Int, y: Int): Unit = js.native // error
  |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |  JS setters must have exactly one argument
-- Error: tests/neg-scalajs/js-members-bad-signatures.scala:9:6 --------------------------------------------------------
9 |  def a3_=(x: Int*): Unit = js.native // error
  |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |  JS setters may not have repeated params
-- Error: tests/neg-scalajs/js-members-bad-signatures.scala:10:6 -------------------------------------------------------
10 |  def a4_=(x: Int = 1): Unit = js.native // error
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |  JS setters may not have default params
-- Error: tests/neg-scalajs/js-members-bad-signatures.scala:15:6 -------------------------------------------------------
14 |  @JSBracketAccess
15 |  def b1(): Int = js.native // error
   |  ^
   |  @JSBracketAccess methods must have one or two parameters
-- Error: tests/neg-scalajs/js-members-bad-signatures.scala:18:6 -------------------------------------------------------
17 |  @JSBracketAccess
18 |  def b2(x: Int, y: Int, z: Int): Int = js.native // error
   |  ^
   |  @JSBracketAccess methods must have one or two parameters
-- Error: tests/neg-scalajs/js-members-bad-signatures.scala:21:6 -------------------------------------------------------
20 |  @JSBracketAccess
21 |  def b3(x: Int, y: Int): Int = js.native // error
   |  ^
   |  @JSBracketAccess methods with two parameters must return Unit
-- Error: tests/neg-scalajs/js-members-bad-signatures.scala:24:6 -------------------------------------------------------
23 |  @JSBracketAccess
24 |  def b4(x: Int*): Int = js.native // error
   |  ^
   |  @JSBracketAccess methods may not have repeated parameters
-- Error: tests/neg-scalajs/js-members-bad-signatures.scala:27:6 -------------------------------------------------------
26 |  @JSBracketAccess
27 |  def b5(x: Int = 1): Int = js.native // error
   |  ^
   |  @JSBracketAccess methods may not have default parameters
-- Error: tests/neg-scalajs/js-members-bad-signatures.scala:32:6 -------------------------------------------------------
31 |  @JSBracketCall
32 |  def c1(): Int = js.native // error
   |  ^
   |  @JSBracketCall methods must have at least one non-repeated parameter
-- Error: tests/neg-scalajs/js-members-bad-signatures.scala:35:6 -------------------------------------------------------
34 |  @JSBracketCall
35 |  def c2(xs: String*): Int = js.native // error
   |  ^
   |  @JSBracketCall methods must have at least one non-repeated parameter
-- Error: tests/neg-scalajs/js-members-bad-signatures.scala:38:6 -------------------------------------------------------
37 |  @JSBracketCall
38 |  def c3(xs: String*)(y: String): Int = js.native // error
   |  ^
   |  @JSBracketCall methods must have at least one non-repeated parameter
